responsive style in nav added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/34af142b44.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Document</title>
 </head>
@@ -31,7 +32,10 @@
                 </ul>
             </div>
         </nav>
-        <section class="banner"></section>
+        <section class="banner">
+            <div class="banner-content"></div>
+            <div class="banner-img"></div>
+        </section>
     </header>
     <main></main>
     <footer></footer>
