online games added

--- a/index.html
+++ b/index.html
@@ -33,11 +33,139 @@
             </div>
         </nav>
         <section class="banner">
-            <div class="banner-content"></div>
-            <div class="banner-img"></div>
+            <div class="banner-content">
+                <h3>Play Like The</h3>
+                <h1 class="gradient-text">G.O.A.T.</h1>
+                <p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path d="M21 12C21 13.1819 20.7672 14.3522 20.3149 15.4442C19.8626 16.5361 19.1997 17.5282 18.364 18.364C17.5282 19.1997 16.5361 19.8626 15.4442 20.3149C14.3522 20.7672 13.1819 21 12 21C10.8181 21 9.64778 20.7672 8.55585 20.3149C7.46392 19.8626 6.47177 19.1997 5.63604 18.364C4.80031 17.5282 4.13738 16.5361 3.68508 15.4442C3.23279 14.3522 3 13.1819 3 12C3 9.61305 3.94821 7.32387 5.63604 5.63604C7.32387 3.94821 9.61305 3 12 3C14.3869 3 16.6761 3.94821 18.364 5.63604C20.0518 7.32387 21 9.61305 21 12Z" stroke="#0B0223" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M15.91 11.672C15.9686 11.7044 16.0174 11.752 16.0513 11.8097C16.0853 11.8673 16.1032 11.9331 16.1032 12C16.1032 12.0669 16.0853 12.1327 16.0513 12.1903C16.0174 12.248 15.9686 12.2955 15.91 12.328L10.307 15.441C10.2499 15.4727 10.1855 15.4889 10.1202 15.4881C10.0549 15.4873 9.99099 15.4694 9.93472 15.4363C9.87845 15.4031 9.8318 15.3559 9.79941 15.2992C9.76701 15.2425 9.74998 15.1783 9.75 15.113V8.887C9.75 8.601 10.057 8.421 10.307 8.56L15.91 11.672Z" fill="url(#paint0_linear_61_274)" stroke="url(#paint1_linear_61_274)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <defs>
+                      <linearGradient id="paint0_linear_61_274" x1="10.5844" y1="11.9992" x2="15.3371" y2="11.9992" gradientUnits="userSpaceOnUse">
+                        <stop stop-color="#FF42A5"/>
+                        <stop offset="1" stop-color="#FF42A5"/>
+                      </linearGradient>
+                      <linearGradient id="paint1_linear_61_274" x1="10.5844" y1="11.9992" x2="15.3371" y2="11.9992" gradientUnits="userSpaceOnUse">
+                        <stop stop-color="#FF42A5"/>
+                        <stop offset="1" stop-color="#FF42A5"/>
+                      </linearGradient>
+                    </defs>
+                  </svg>
+                     1-Click instant play</p>
+
+
+                     <p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path d="M3 16.5V18.75C3 19.3467 3.23705 19.919 3.65901 20.341C4.08097 20.7629 4.65326 21 5.25 21H18.75C19.3467 21 19.919 20.7629 20.341 20.341C20.7629 19.919 21 19.3467 21 18.75V16.5M16.5 12L12 16.5M12 16.5L7.5 12M12 16.5V3" stroke="url(#paint0_linear_61_286)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <defs>
+                      <linearGradient id="paint0_linear_61_286" x1="5.36416" y1="11.9976" x2="18.8295" y2="11.9976" gradientUnits="userSpaceOnUse">
+                        <stop stop-color="#FF42A5"/>
+                        <stop offset="1" stop-color="#FF42A5"/>
+                      </linearGradient>
+                    </defs>
+                  </svg> No Download</p>
+                <p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path d="M15 19.128C15.853 19.3757 16.7368 19.5009 17.625 19.5C19.0534 19.5021 20.4633 19.1764 21.746 18.548C21.7839 17.6517 21.5286 16.7675 21.0188 16.0293C20.509 15.2912 19.7724 14.7394 18.9207 14.4575C18.0691 14.1757 17.1487 14.1791 16.2992 14.4674C15.4497 14.7557 14.7173 15.313 14.213 16.055M15 19.128V19.125C15 18.012 14.714 16.965 14.213 16.055M15 19.128V19.234C13.0755 20.3931 10.8706 21.0038 8.62402 21C6.29302 21 4.11202 20.355 2.25002 19.234L2.24902 19.125C2.24826 17.7095 2.71864 16.3339 3.58601 15.2153C4.45338 14.0966 5.6684 13.2984 7.03951 12.9466C8.41063 12.5948 9.85985 12.7093 11.1587 13.2721C12.4575 13.8349 13.5321 14.814 14.213 16.055M12 6.375C12 7.27011 11.6444 8.12855 11.0115 8.76149C10.3786 9.39442 9.52013 9.75 8.62502 9.75C7.72992 9.75 6.87147 9.39442 6.23854 8.76149C5.6056 8.12855 5.25002 7.27011 5.25002 6.375C5.25002 5.47989 5.6056 4.62145 6.23854 3.98851C6.87147 3.35558 7.72992 3 8.62502 3C9.52013 3 10.3786 3.35558 11.0115 3.98851C11.6444 4.62145 12 5.47989 12 6.375ZM20.25 8.625C20.25 9.32119 19.9735 9.98887 19.4812 10.4812C18.9889 10.9734 18.3212 11.25 17.625 11.25C16.9288 11.25 16.2612 10.9734 15.7689 10.4812C15.2766 9.98887 15 9.32119 15 8.625C15 7.92881 15.2766 7.26113 15.7689 6.76884C16.2612 6.27656 16.9288 6 17.625 6C18.3212 6 18.9889 6.27656 19.4812 6.76884C19.9735 7.26113 20.25 7.92881 20.25 8.625Z" stroke="#0B0223" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg> 1000s of supported online games</p>
+                  <div>
+                    <button class=" btn btn-megenta">Sign In</button>
+                    <button class="btn btn-megenta">Go Rogue</button>
+                  </div>
+                
+            </div>
+            <div class="banner-img">
+                <img src="images/Group 18.png" alt="">
+            </div>
         </section>
     </header>
-    <main></main>
+    <main>
+        <section class="we-are-gamer">
+            <div class="gamer-img"><img src="images/pngwing 4.png" alt=""></div>
+            <div class="gamer-content">
+                <h1 class="gradient-text">We are gamer</h1>
+                <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <button class="btn btn-megenta">know more</button>
+                <p>Our purpose...</p>
+                <h2>“unleash the gamer in everyone”</h2>
+            </div>
+        </section>
+        <section class="online-games">
+            <div class="online-games-content">
+                <h1>Online Games <span>Funny Videos</span></h1>
+                <p>A Collection of Hilarious <br>Videos to Brighten Your Day</p>
+            </div>
+            <div class="online-games-img-section">
+                <div class="games-img-box">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <div class="overlay">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                            <g clip-path="url(#clip0_62_379)">
+                              <path d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z" fill="white"/>
+                            </g>
+                            <defs>
+                              <clipPath id="clip0_62_379">
+                                <rect width="48" height="48" fill="white"/>
+                              </clipPath>
+                            </defs>
+                          </svg>
+                          <p>Watch Now</p>
+                    </div>
+                    <p>No Download. No Installs. Play games <br>Instantly on Gamer.</p>
+                </div>
+                <div class="games-img-box">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <div class="overlay">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                            <g clip-path="url(#clip0_62_379)">
+                              <path d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z" fill="white"/>
+                            </g>
+                            <defs>
+                              <clipPath id="clip0_62_379">
+                                <rect width="48" height="48" fill="white"/>
+                              </clipPath>
+                            </defs>
+                          </svg>
+                          <p>Watch Now</p>
+                    </div>
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="games-img-box">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <div class="overlay">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                            <g clip-path="url(#clip0_62_379)">
+                              <path d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z" fill="white"/>
+                            </g>
+                            <defs>
+                              <clipPath id="clip0_62_379">
+                                <rect width="48" height="48" fill="white"/>
+                              </clipPath>
+                            </defs>
+                          </svg>
+                          <p>Watch Now</p>
+                    </div>
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div class="games-img-box">
+                  <div class="games-img"><img src="images/Rectangle 7.png" alt=""></div>  
+                    <div class="overlay">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                            <g clip-path="url(#clip0_62_379)">
+                              <path d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z" fill="white"/>
+                            </g>
+                            <defs>
+                              <clipPath id="clip0_62_379">
+                                <rect width="48" height="48" fill="white"/>
+                              </clipPath>
+                            </defs>
+                          </svg>
+                          <p>Watch Now</p>
+                    </div>
+                    <p>Busted gaming on school laptop,<br> but you are still lit.</p>
+                </div>
+            </div>
+
+        </section>
+    </main>
     <footer></footer>
     
 </body>
