--- a/index.html
+++ b/index.html
@@ -91,77 +91,77 @@
         <section class="online-games">
             <div class="online-games-content">
                 <h1>Online Games <span>Funny Videos</span></h1>
-                <p>A Collection of Hilarious <br>Videos to Brighten Your Day</p>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
             </div>
             <div class="online-games-img-section">
-                <div class="games-img-box">
-                    <img src="images/Rectangle 4.png" alt="">
-                    <div class="overlay">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
-                            <g clip-path="url(#clip0_62_379)">
-                              <path d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z" fill="white"/>
-                            </g>
-                            <defs>
-                              <clipPath id="clip0_62_379">
-                                <rect width="48" height="48" fill="white"/>
-                              </clipPath>
-                            </defs>
-                          </svg>
-                          <p>Watch Now</p>
-                    </div>
-                    <p>No Download. No Installs. Play games <br>Instantly on Gamer.</p>
+              <div class="games-img-box">
+                <img src="images/Rectangle 4.png" alt="">
+                <div class="overlay">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                        <g clip-path="url(#clip0_62_379)">
+                          <path d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z" fill="white"/>
+                        </g>
+                        <defs>
+                          <clipPath id="clip0_62_379">
+                            <rect width="48" height="48" fill="white"/>
+                          </clipPath>
+                        </defs>
+                      </svg>
+                      <p>Watch Now</p>
                 </div>
-                <div class="games-img-box">
-                    <img src="images/Rectangle 5.png" alt="">
-                    <div class="overlay">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
-                            <g clip-path="url(#clip0_62_379)">
-                              <path d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z" fill="white"/>
-                            </g>
-                            <defs>
-                              <clipPath id="clip0_62_379">
-                                <rect width="48" height="48" fill="white"/>
-                              </clipPath>
-                            </defs>
-                          </svg>
-                          <p>Watch Now</p>
-                    </div>
-                    <p>Did you score? #unblockedgames #school</p>
-                </div>
-                <div class="games-img-box">
-                    <img src="images/Rectangle 6.png" alt="">
-                    <div class="overlay">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
-                            <g clip-path="url(#clip0_62_379)">
-                              <path d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z" fill="white"/>
-                            </g>
-                            <defs>
-                              <clipPath id="clip0_62_379">
-                                <rect width="48" height="48" fill="white"/>
-                              </clipPath>
-                            </defs>
-                          </svg>
-                          <p>Watch Now</p>
-                    </div>
-                    <p>Breaking game records like OG</p>
-                </div>
-                <div class="games-img-box">
-                  <div class="games-img"><img src="images/Rectangle 7.png" alt=""></div>  
-                    <div class="overlay">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
-                            <g clip-path="url(#clip0_62_379)">
-                              <path d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z" fill="white"/>
-                            </g>
-                            <defs>
-                              <clipPath id="clip0_62_379">
-                                <rect width="48" height="48" fill="white"/>
-                              </clipPath>
-                            </defs>
-                          </svg>
-                          <p>Watch Now</p>
-                    </div>
-                    <p>Busted gaming on school laptop,<br> but you are still lit.</p>
-                </div>
+                <p>No Download. No Installs. Play games <br>Instantly on Gamer.</p>
+            </div>
+            <div class="games-img-box">
+              <img src="images/Rectangle 5.png" alt="">
+              <div class="overlay">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                      <g clip-path="url(#clip0_62_379)">
+                        <path d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z" fill="white"/>
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_62_379">
+                          <rect width="48" height="48" fill="white"/>
+                        </clipPath>
+                      </defs>
+                    </svg>
+                    <p>Watch Now</p>
+              </div>
+              <p>No Download. No Installs. Play games <br>Instantly on Gamer.</p>
+          </div>
+          <div class="games-img-box">
+            <img src="images/Rectangle 6.png" alt="">
+            <div class="overlay">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                    <g clip-path="url(#clip0_62_379)">
+                      <path d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z" fill="white"/>
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_62_379">
+                        <rect width="48" height="48" fill="white"/>
+                      </clipPath>
+                    </defs>
+                  </svg>
+                  <p>Watch Now</p>
+            </div>
+            <p>No Download. No Installs. Play games <br>Instantly on Gamer.</p>
+        </div>
+        <div class="games-img-box">
+          <img src="images/Rectangle 7.png" alt="">
+          <div class="overlay">
+              <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                  <g clip-path="url(#clip0_62_379)">
+                    <path d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z" fill="white"/>
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_62_379">
+                      <rect width="48" height="48" fill="white"/>
+                    </clipPath>
+                  </defs>
+                </svg>
+                <p>Watch Now</p>
+          </div>
+          <p>No Download. No Installs. Play games <br>Instantly on Gamer.</p>
+      </div>
             </div>
 
         </section>
