--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="online-games-img-section">
               <div class="games-img-box">
-                <img src="images/Rectangle 4.png" alt="">
+                <img class="hover-play-img" src="images/Rectangle 4.png" alt="">
                 <div class="overlay">
                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
                         <g clip-path="url(#clip0_62_379)">
@@ -112,7 +112,7 @@
                 <p>No Download. No Installs. Play games <br>Instantly on Gamer.</p>
             </div>
             <div class="games-img-box">
-              <img src="images/Rectangle 5.png" alt="">
+              <img class="hover-play-img" src="images/Rectangle 5.png" alt="">
               <div class="overlay">
                   <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
                       <g clip-path="url(#clip0_62_379)">
@@ -129,7 +129,7 @@
               <p>No Download. No Installs. Play games <br>Instantly on Gamer.</p>
           </div>
           <div class="games-img-box">
-            <img src="images/Rectangle 6.png" alt="">
+            <img class="hover-play-img" src="images/Rectangle 6.png" alt="">
             <div class="overlay">
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
                     <g clip-path="url(#clip0_62_379)">
@@ -146,7 +146,7 @@
             <p>No Download. No Installs. Play games <br>Instantly on Gamer.</p>
         </div>
         <div class="games-img-box">
-          <img src="images/Rectangle 7.png" alt="">
+          <img class="hover-play-img" src="images/Rectangle 7.png" alt="">
           <div class="overlay">
               <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
                   <g clip-path="url(#clip0_62_379)">
@@ -165,6 +165,21 @@
             </div>
 
         </section>
+        <section class="play-instant-section"><div class="play-instant">
+          <div class="play-instant-content">
+            <h1> <span>Play Instantly,</span><br>
+              No Downloads
+              No Installs.</h1>
+              <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+
+          </div>
+          <div class="play-instant-img">
+            <div class="play-instant-limg"> <img src="images/Rectangle 55.png" alt=""></div>
+            <div class="play-instant-simg"><img src="images/Rectangle 66.png" alt=""></div>
+          </div>
+        </div>
+      </section>
+        
     </main>
     <footer></footer>
     
