game-type-section added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/34af142b44.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="tablet.css">
     <link rel="stylesheet" href="mobile.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Document</title>
@@ -178,6 +179,49 @@
             <div class="play-instant-simg"><img src="images/Rectangle 66.png" alt=""></div>
           </div>
         </div>
+      </section>
+      <section class="game-types-section">
+        <div class="game-types-container">
+          <div class="game-types">
+            <img src="images/Rectangle 11.png" alt="">
+            <h3>Action Games</h3>
+          </div>
+          <div class="game-types">
+            <img src="images/Rectangle 12.png" alt="">
+            <h3>Action Games</h3>
+          </div>
+            <div class="game-types">
+            <img src="images/Rectangle 13.png" alt="">
+            <h3>Action Games</h3>
+          </div>
+          <div class="game-types">
+            <img src="images/Rectangle 14.png" alt="">
+            <h3>Action Games</h3>
+          </div>
+          <div class="game-types">
+            <img src="images/Rectangle 15.png" alt="">
+            <h3>Action Games</h3>
+          </div>
+          <div class="game-types">
+            <img src="images/Rectangle 16.png" alt="">
+            <h3>Action Games</h3>
+          </div>
+          <div class="game-types">
+            <img src="images/Rectangle 17.png" alt="">
+            <h3>Action Games</h3>
+          </div>
+            <div class="game-types">
+            <img src="images/Rectangle 18.png" alt="">
+            <h3>Action Games</h3>
+          </div>
+          <div class="game-types">
+            <img src="images/Rectangle 19.png" alt="">
+            <h3>Action Games</h3>
+          </div>
+        </div>
+      
+
+
       </section>
         
     </main>
