online-games-responsivess problem solved

--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@
                   </svg> 1000s of supported online games</p>
                   <div>
                     <button class=" btn btn-megenta">Sign In</button>
-                    <button class="btn btn-megenta">Go Rogue</button>
+                    <button class="btn btn-blue">Go Rogue</button>
                   </div>
                 
             </div>
             <div class="banner-img">
-                <img src="images/Group 18.png" alt="">
+              <div></div>
+               <div> <img src="images/Group 18.png" alt=""></div>
             </div>
         </section>
     </header>
@@ -89,13 +90,16 @@
                 <h2>“unleash the gamer in everyone”</h2>
             </div>
         </section>
+        <!----------------------------------- we-are-gamer-section ends ----------------------------------------->
+
+        <!----------------------------------- online-games-section starts ----------------------------------------->
         <section class="online-games">
             <div class="online-games-content">
                 <h1>Online Games <span>Funny Videos</span></h1>
                 <p>A Collection of Hilarious Videos to Brighten Your Day</p>
             </div>
             <div class="online-games-img-section">
-              <div class="games-img-box">
+              <div class="games-img-box ">
                 <img class="hover-play-img" src="images/Rectangle 4.png" alt="">
                 <div class="overlay">
                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
@@ -127,7 +131,7 @@
                     </svg>
                     <p>Watch Now</p>
               </div>
-              <p>No Download. No Installs. Play games <br>Instantly on Gamer.</p>
+              <p>Did you score? #unblockedgames <br> #school </p>
           </div>
           <div class="games-img-box">
             <img class="hover-play-img" src="images/Rectangle 6.png" alt="">
@@ -144,7 +148,7 @@
                   </svg>
                   <p>Watch Now</p>
             </div>
-            <p>No Download. No Installs. Play games <br>Instantly on Gamer.</p>
+            <p>Breaking game recordsbr <br>like OG </p>
         </div>
         <div class="games-img-box">
           <img class="hover-play-img" src="images/Rectangle 7.png" alt="">
@@ -161,11 +165,15 @@
                 </svg>
                 <p>Watch Now</p>
           </div>
-          <p>No Download. No Installs. Play games <br>Instantly on Gamer.</p>
+          <p>Busted gaming on school laptop,<br> but you are still lit.</p>
       </div>
             </div>
 
         </section>
+
+<!----------------------------------- online-games-section ends ----------------------------------------->
+
+<!----------------------------------- play-instant-section starts ----------------------------------------->
         <section class="play-instant-section"><div class="play-instant">
           <div class="play-instant-content">
             <h1> <span>Play Instantly,</span><br>
