banner section modified

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         </nav>
         <!-------------------------------- banner section started ---------------------------->
         <section class="banner">
-            <div class="banner-content">
+            <div class="banner-content-area">
+              <div class="banner-content">
+
                 <h3>Play Like The</h3>
                 <h1 class="gradient-text">G.O.A.T.</h1>
                 <p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -72,6 +74,9 @@
                     <button class=" btn btn-megenta">Sign In</button>
                     <button class="btn btn-blue">Go Rogue</button>
                   </div>
+              </div>
+
+                
                 
             </div>
             <div class="banner-img">
