banner section modified

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   </svg>
                   <p>Watch Now</p>
             </div>
-            <p>Breaking game records <br> like OG </p>
+            <p>Breaking game records like OG </p>
         </div>
         <div class="games-img-box">
           <img class="hover-play-img" src="images/Rectangle 7.png" alt="">
