dekstop style modified

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Gamer</title>
 </head>
 <body>
-    <header>
+    <header >
         <nav class="navbar">
             <div class="logo-section">
                 <div class="logo-img"><img src="images/Frame.png" alt=""></div>
@@ -86,11 +86,11 @@
         </section>
          <!-------------------------------- banner section ended ---------------------------->
     </header>
-    <main>
+    <main >
 <!-------------------------------- we are gamer section started ---------------------------->
-        <section class="we-are-gamer">
-            <div class="gamer-img"><img src="images/pngwing 4.png" alt=""></div>
-            <div class="gamer-content">
+        <section class=" we-are-gamer">
+            <div class="gamer-img "><img src="images/pngwing 4.png" alt=""></div>
+            <div class="gamer-content ">
                 <h1 class="gradient-text">We are gamer</h1>
                 <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
                 <button class="btn btn-megenta">know more</button>
@@ -142,7 +142,7 @@
               <p>Did you score? #unblockedgames <br> #school </p>
           </div>
           <div class="games-img-box">
-            <img class="hover-play-img" src="images/Rectangle 6.png" alt="">
+            <img class="hover-play-img" src="images/Rectangle 7.png" alt="">
             <div class="overlay">
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
                     <g clip-path="url(#clip0_62_379)">
@@ -159,7 +159,7 @@
             <p>Breaking game records like OG </p>
         </div>
         <div class="games-img-box">
-          <img class="hover-play-img" src="images/Rectangle 7.png" alt="">
+          <img class="hover-play-img" src="images/Rectangle 6.png" alt="">
           <div class="overlay">
               <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
                   <g clip-path="url(#clip0_62_379)">
@@ -181,22 +181,24 @@
 <!----------------------------------- online-games-section ends ----------------------------------------->
 
 <!----------------------------------- play-instant-section starts ----------------------------------------->
-        <section class="play-instant-section"><div class="play-instant">
-          <div class="play-instant-content">
-            <h1> <span>Play Instantly,</span><br>
-              No Downloads
-              No Installs.</h1>
-              <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+        
+      <section class=" play-instant-section"><div class="play-instant">
+        <div class="play-instant-content">
+          <h1> <span>Play Instantly,</span><br>
+            No Downloads
+            No Installs.</h1>
+            <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
 
-          </div>
-          <div class="play-instant-img">
-            <div class="play-instant-limg"> <img src="images/Rectangle 55.png" alt=""></div>
-            <div class="play-instant-simg"><img src="images/Rectangle 66.png" alt=""></div>
-          </div>
         </div>
-      </section>
-     
-      <!----------------------------------- play-instant-section ends ----------------------------------------->
+        <div class="play-instant-img">
+          <div class="play-instant-limg"> <img src="images/Rectangle 55.png" alt=""></div>
+          <div class="play-instant-simg"><img src="images/Rectangle 66.png" alt=""></div>
+        </div>
+      </div>
+    </section>
+
+<!----------------------------------- play-instant-section endss ----------------------------------------->
+  
      <!----------------------------------- game-types-section starts ----------------------------------------->
       <section class="game-types-section">
         <div class="game-types-container">
